[package]
name = "metro-draw"
version = "0.1.0"
edition = "2021"
authors = ["ThatsNoMoon <git@thatsnomoon.dev>"]
license = "AGPL-3.0-only"

[dependencies]
iced = { version = "0.4", features = ["canvas", "pure", "tokio"] }
iced_futures = { version = "0.4", features = ["tokio"] }
iced_native = "0.5"
iced_pure = "0.2"
ordered-float = "3.0"
